# cubic-solver

./: .gitignore  Makefile  README.md  pyproject.toml
cubic_solver/: __init__.py  __main__.py  factory.py  logger.py  parser.py
cubic_solver/solutions/: base.py  identity.py  regular.py
cubic_solver/solvers/: __init__.py  base.py  cubic.py  identity.py  linear.py  quadratic.py
tests/integration/: conftest.py  test_solutions.py
